--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link rel="apple-touch-icon" sizes="144x144" href="img/favicon/color-5/apple-touch-icon-144x144.png">
     <link rel="apple-touch-icon" sizes="152x152" href="img/favicon/color-5/apple-touch-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/color-5/apple-touch-icon-180x180.png"> -->
-    <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64 96x96" href="img/favicon/color-5/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64 96x96" href="/img/favicon/color-5/favicon.ico" type="image/x-icon">
     <!-- <link rel="icon" type="image/png" sizes="192x192" href="img/favicon/color-5/android-chrome-192x192.png"> -->
     <!-- <meta property="og:image" content="img/favicon/color-5/og-image-250x250.jpg"> -->
     <!-- Template Favicon & Icons End-->
@@ -59,22 +59,22 @@
 
     <!-- Load Fonts CSS Start-->
     <script>
-      loadCSS( "css/fonts.min.css?ver=1.0.0", false, "all" ); // Loading fonts, if the site is located in a subfolder
+      loadCSS( "/css/fonts.min.css?ver=1.0.0", false, "all" ); // Loading fonts, if the site is located in a subfolder
     </script>
     <!-- Load Fonts CSS End-->
 
     <!-- Load Custom CSS Start-->
     <script>
-      loadCSS( "css/main.min.css?ver=1.0.0", false, "all" );
-      loadCSS( "css/colors/color-5.min.css?ver=1.0.0", false, "all" );
+      loadCSS( "/css/main.min.css?ver=1.0.0", false, "all" );
+      loadCSS( "/css/colors/color-5.min.css?ver=1.0.0", false, "all" );
     </script>
     <!-- Load Custom CSS End-->
 
     <!-- Load Custom CSS Compiled without JS Start-->
     <noscript>
-      <link rel="stylesheet" href="css/fonts.min.css">
-      <link rel="stylesheet" href="css/main.min.css">
-      <link rel="stylesheet" href="css/colors/color-5.min.css">
+      <link rel="stylesheet" href="/css/fonts.min.css">
+      <link rel="stylesheet" href="/css/main.min.css">
+      <link rel="stylesheet" href="/css/colors/color-5.min.css">
     </noscript>
     <!-- Load Custom CSS Compiled without JS End-->
 
@@ -459,7 +459,7 @@
             <!-- Works Gallery Single Item Start -->
             <figure class="col-xs-12 col-sm-6 col-lg-4" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
               <a href="https://www.activeman.com" itemprop="contentUrl" target="_blank">
-                <img src="img//gallery/activeman.jpg" itemprop="thumbnail" alt="ActiveMan" />
+                <img src="/img/gallery/activeman.jpg" itemprop="thumbnail" alt="ActiveMan" />
                 <div class="overlay"></div>
               <figcaption class="works-description" itemprop="For that uniquely male lifestyle">
                 <h4>ActiveMan</h4>
@@ -471,7 +471,7 @@
             <!-- Works Gallery Single Item Start -->
             <figure class="col-xs-12 col-sm-6 col-lg-4" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
               <a href="https://www.foodanddating.com" itemprop="contentUrl" target="_blank">
-                <img src="img//gallery/fooddating.jpg" itemprop="thumbnail" alt="Food and Dating" />
+                <img src="/img/gallery/fooddating.jpg" itemprop="thumbnail" alt="Food and Dating" />
                 <div class="overlay"></div>
               
               <figcaption class="works-description" itemprop="for foodies and lovers">
@@ -484,7 +484,7 @@
             <!-- Works Gallery Single Item Start -->
             <figure class="col-xs-12 col-sm-6 col-lg-4" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
               <a href="https://www.contentbees.com" itemprop="contentUrl" target="_blank">
-                <img src="img//gallery/contentbees.jpg" itemprop="thumbnail" alt="contentbees" />
+                <img src="/img/gallery/contentbees.jpg" itemprop="thumbnail" alt="contentbees" />
                 <div class="overlay"></div>
               <figcaption class="works-description" itemprop="contentbees">
                 <h4>ContentBees</h4>
@@ -748,9 +748,9 @@
     </div>
 
     <!-- Load Scripts Start-->
-    <script type="text/javascript" src="js/libs.min.js"></script>
+    <script type="text/javascript" src="/js/libs.min.js"></script>
     <!-- <script type="text/javascript" src="js/gallery-init.js"></script> -->
-    <script type="text/javascript" src="js/axio-custom.js"></script>
+    <script type="text/javascript" src="/js/axio-custom.js"></script>
     <!-- <script type="text/javascript" src="js/maps/map-color-5.js"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDNMDtmEsvSevM4ztfsbhLfLNZhKHCvWXk"></script> -->
     <!-- Load Scripts End-->
