--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <!-- Old Browsers Support End-->
 
     <!-- Loader Start-->
-    <div class="loader" style="background:rgb(248, 22, 22)">
+    <div class="loader" style="background: black">
       <div class="loader-content">
         <!-- <div class="loader-logo slideInDown">
           <img src="img/logo-loader.svg" alt="Axio">
