--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           <img src="img/logo-loader.svg" alt="Axio">
         </div> -->
         <div class="loader-caption slideInUp">
-          <p class="loading-text">BYX Media</p>
+          <p class="loading-text">BYX <span style="text-transform:capitalize;">Media</span></p>
           <span class="loading-dots">
             <span class="dot"></span>
             <span class="dot"></span>
