--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
     <link rel="apple-touch-icon" sizes="144x144" href="img/favicon/color-5/apple-touch-icon-144x144.png">
     <link rel="apple-touch-icon" sizes="152x152" href="img/favicon/color-5/apple-touch-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/color-5/apple-touch-icon-180x180.png"> -->
-    <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64 96x96" href="/img/favicon/color-5/favicon.ico" type="image/x-icon">
+    <!-- <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64 96x96" href="/img/favicon/color-5/favicon.ico" type="image/x-icon"> -->
     <!-- <link rel="icon" type="image/png" sizes="192x192" href="img/favicon/color-5/android-chrome-192x192.png"> -->
     <!-- <meta property="og:image" content="img/favicon/color-5/og-image-250x250.jpg"> -->
     <!-- Template Favicon & Icons End-->
+
+    <link href="/img/favicon/color-5/favicon.ico" rel="shortcut icon" type="image/x-icon">
 
     <!-- Loader Styles Start-->
     <style>
@@ -181,7 +183,7 @@
               <ul>
                 <!-- <li><a href="#" id="about-trigger">About us</a></li> -->
                 <li><a href="#" id="works-trigger">Our brands</a></li>
-                <li><a href="mailto:pituk@byxmedia.com">Contact</a></li>
+                <li><a class="typeform-share link" href="https://placeful.typeform.com/to/xCVeTz" data-mode="popup">Contact</a></li>
               </ul>
             </nav>
           </div>
@@ -765,6 +767,9 @@
   ga('send', 'pageview');
 
 </script>
+
+
+<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 
   </body>
 
