--- a/index.html
+++ b/index.html
@@ -120,6 +120,14 @@
 
     </style>
 
+    <script type="text/javascript" src="https://www.foodanddating.com/public/ghost-sdk.min.js?v=229925ebd1"></script>
+    <script type="text/javascript">
+    ghost.init({
+      clientId: "ghost-frontend",
+      clientSecret: "be1cde3569b0"
+    });
+    </script>
+
   </head>
 
   <body>
@@ -678,6 +686,23 @@
 
 <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 
-  </body>
+<script>
+function onSuccess(data) {
+  var $result = $('#blog-posts');
+  $.each(data.posts, function (i, post) {
+    console.log(post);
+    $result.append(
+      '<li>' + post.title + '</li>'
+    );
+  });
+}  
+
+jQuery(document).ready(function () {
+  $.get(
+    ghost.url.api('posts', {limit: 3})
+  ).done(onSuccess);
+});
+</script>
+</body>
 
 </html>
