--- a/index.html
+++ b/index.html
@@ -699,8 +699,11 @@ function onSuccess(data) {
 
 jQuery(document).ready(function () {
 
+  var url = ghost.url.api('posts', {limit: 3});
+  console.log(url)
+
   $.ajax({
-    url: ghost.url.api('posts', {limit: 3}),
+    url: url,
     type: 'GET',
     crossDomain: true,
     dataType: 'jsonp',
