--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@ jQuery(document).ready(function () {
   console.log(url)
 
   $.ajax({
-    url: url,
+    url: 'https:' + url,
     type: 'GET',
     crossDomain: true,
     dataType: 'jsonp',
