--- a/index.html
+++ b/index.html
@@ -121,6 +121,11 @@
       .side-title{
         font-size: 2.8rem;
         line-height: 1.16;
+        margin-top: 13px;
+      }
+
+      .side-title a{
+        color: silver;
       }
 
     </style>
