--- a/index.html
+++ b/index.html
@@ -212,7 +212,10 @@
               <span class="words-wrapper">
                 <b class="is-visible">Active</b>
                 <b>Foodies</b>
-                <b>Viral</b>
+                <b>Sensational</b>
+                <b>Authentic</b>
+                <b>Enthusiastic</b>
+                <b>Bold</b>
               </span>
             </h1>
             <!-- Animated Headline End-->
