--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       <div class="container-fluid fullheight">
 
         <!-- Intro Section with Image Background Start -->
-        <div class="main-intro col-xs-12 col-md-8 col-lg-9" style="background-image:url(img/backgrounds/bg-main-color-5.jpg);">
+        <div class="main-intro col-xs-12 col-md-8 col-lg-9" style="background-image:url(img/backgrounds/roman-kraft-220246.jpg);">
 
           <!-- Background Effect Start -->
           <!-- Video Background Start-->
@@ -703,6 +703,12 @@ var clients = [
   clientSecret: "7b2f118f5491",
   url: 'https://www.activeman.com',
   name: 'ActiveMan'
+},
+{
+  clientId: "ghost-frontend",
+	clientSecret: "47be2a9ea1e4",
+  url: 'https://www.fyxes.com',
+  name: 'Fyxes'
 }
 ];
 
