--- a/index.html
+++ b/index.html
@@ -468,7 +468,20 @@
                 <div class="overlay"></div>
 
               <figcaption class="works-description" itemprop="for foodies and lovers">
-                <h4>Food&Dating</h4>
+                <h4>Food & Dating</h4>
+              </figcaption>
+              </a>
+            </figure>
+            <!-- Works Gallery Single Item End -->
+
+            <!-- Works Gallery Single Item Start -->
+            <figure class="col-xs-12 col-sm-6 col-lg-4" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+              <a href="https://www.fyxes.com" itemprop="contentUrl" target="_blank">
+                <img src="/img/gallery/fyxes.jpg" itemprop="thumbnail" alt="Fyxes" />
+                <div class="overlay"></div>
+
+              <figcaption class="works-description" itemprop="latest startup stories">
+                <h4>Fyxes</h4>
               </figcaption>
               </a>
             </figure>
